--- a/source/_posts/JavaWeb/文件上传和下载.md
+++ b/source/_posts/JavaWeb/文件上传和下载.md
@@ -1,12 +1,13 @@
 ---
 abbrlink: 78493f3f
-title: 笔记
+title: Http
 categories: JavaWeb
+tag: JavaWeb
+summary:  
+    1. 转发和重定向区别
+    2. doGet和 doPost 使用   
+    3. 文件上传下载
 ---
-
-> 1. 转发和重定向区别，2. doGet和 doPost 使用   3. 文件上传下载
-
-<!-- more -->
 
 # 转发和重定向的区别
 
