--- a/source/_posts/JavaWeb/验证码生成.md
+++ b/source/_posts/JavaWeb/验证码生成.md
@@ -2,10 +2,10 @@
 abbrlink: 3523544f
 title: 验证码
 categories: JavaWeb
+tag: JavaWeb
 img: 
 top: true
-cover: true
-coverImg: https://gitee.com/KawYang/image/raw/master/img/20210417234444.png
+cover: false
 ---
 
 > 验证码使用
