--- a/source/_posts/算法导论/算法分析(一).md
+++ b/source/_posts/算法导论/算法分析(一).md
@@ -1,14 +1,20 @@
 ---
 title: 算法分析 (一)-  Analysis of Algorithm
-categories: 算法
 tags: 算法
 abbrlink: 8ed8be26
 date: 2020-07-08 15:40:07
+top: false
+cover: true
+coverImg: https://gitee.com/KawYang/image/raw/master/img/20210417234444.png
+toc: false
+mathjax: true
+summary: 本文内容： 介绍算法简介、算法对时间的分析方式、对插入排序进行时间分析。
+categories: 算法
+img:  https://gitee.com/KawYang/image/raw/master/img/20210417234444.png
 ---
 
 ## 算法分析 (一)-  Analysis of Algorithm
 
-> 本文内容： 介绍算法简介、算法对时间的分析方式、对插入排序进行时间分析。
 ---
 
 > 算法分析是关于计算机程序性能和**资源利用**的研究,这是关于性能的课程
