--- a/source/_posts/设计模式/单例设计模式.md
+++ b/source/_posts/设计模式/单例设计模式.md
@@ -5,12 +5,8 @@ abbrlink: cd333c07
 date: 2020-07-09 10:16:09
 tags:
 	- 设计模式
-	- 单例模式
+summary: 本文总结了单例设计模式的基本内容，并📝Enum、序列化等内容。
 ---
-
-> 本文总结了单例设计模式的基本内容，并📝Enum、序列化等内容。
-
-<!-- more -->
 
 ## 定义
 保证一个类只有一个实例，并且提供一个全局访问点
