--- a/source/_posts/设计模式/设计模式-工厂模式.md
+++ b/source/_posts/设计模式/设计模式-工厂模式.md
@@ -2,15 +2,11 @@
 title: 设计模式-工厂模式
 categories: 设计模式
 tags:
-  - 工厂模式
-  - 抽象工厂
+   - 设计模式
 abbrlink: ccff2b22
 date: 2020-07-10 08:56:24
+summary: 本文记录了工厂设计模式的基本实现方法。
 ---
-
-> 本文记录了工厂设计模式的基本实现方法。
-
-<!-- more -->
 
 ## 工厂模式
 
