--- a/source/_posts/算法导论/算法导论(三).md
+++ b/source/_posts/算法导论/算法导论(三).md
@@ -6,10 +6,9 @@ cover: false
 coverImg: /images/1.jpg
 toc: false
 mathjax: true
-summary: 摘要
-categories: 分类
+categories: 算法
 tags:
-  - blog
+  - 算法
 abbrlink: 54fa06f3
 date: 2021-07-05 21:38:31
 img:
