--- a/source/_posts/设计模式/设计模式-建造者模式.md
+++ b/source/_posts/设计模式/设计模式-建造者模式.md
@@ -5,9 +5,10 @@ abbrlink: 2a48474d
 date: 2020-07-17 17:35:03
 tags:
 	- 设计模式
-summary: 当单个对象包含多个内部成员，并且成员创建较为复杂，甚至成员创建有一定顺序时，需要`Builder`设计模式。
 ---
+> 建造者模式学习
 
+<!-- more -->
 
 ## 示例 1
 
