--- a/source/_posts/Java/lambda/函数式接口-二.md
+++ b/source/_posts/Java/lambda/函数式接口-二.md
@@ -5,7 +5,7 @@ top: false
 cover: false
 toc: false
 mathjax: true
-categories: Java
+categories: Lambda
 tags:
   - 函数式接口
   - lambda
@@ -32,7 +32,7 @@ class C extends A,B{} ‍️
 **多级继承**
 
 - Java.long.Object
-    
+  
     class A{}  
     class B extends A {}  ‍️  
     class C extends B {}  ‍️  
@@ -152,7 +152,7 @@ public interface 接口名称{
   - 接口不能直接使用，必须使用一个实现类来实现接口
     ```java
     public class 实现类名 implements 接口名称{
-
+    
     }
     ```
   - 实现类**必须**重写 接口中所有的抽象类
@@ -163,7 +163,7 @@ public interface 接口名称{
 ### 默认方法
 
 - 从JDK8 允许默认方法
-    
+  
 - 可以解决接口升级问题
   - 如果接口添加抽象方法，就会导致所有子类全部实现
   - 使用default 方法，在**接口中实现方法体**
@@ -423,10 +423,9 @@ public class RunnableLambda {
         new Thread(()->System.out.println(Thread.currentThread().getName() +"--> 线程启动!")).start();
     }
 }
-```		
+```
 
 #### 返回值
 
 Comparator 也是一个 函数式借口
-
 
