--- a/source/_posts/Python/环境配置.md
+++ b/source/_posts/Python/环境配置.md
@@ -49,7 +49,7 @@ Type "help", "copyright", "credits" or "license" for more information.
 
 ### 配置环境变量
 
-> 修改 `.bash_profile` 文件 - 注释掉就配置文件, 添加新 Python 版本的路径,`一般只修改版本号即可`. Mac有多个配置文件[^1] 
+> 修改 `.bash_profile` 文件 - 注释掉就配置文件, 添加新 Python 版本的路径,`一般只修改版本号即可`. Mac有多个配置文件[<sup>1</sup>](#refer-anchor-1)
 
 ```shell
 # Setting PATH for Python 3.8
@@ -59,7 +59,7 @@ PATH="/Library/Frameworks/Python.framework/Versions/3.9/bin:${PATH}"
 export PATH
 ```
 
-### Linux别名[^2]
+### Linux别名[<sup>2</sup>](#refer-anchor-2)
 
 > 使用别名的方式为 Python 新版本的执行脚本起个别名
 
@@ -72,32 +72,31 @@ Type "help", "copyright", "credits" or "license" for more information.
 >>> 
 ```
 
-**关键, 该方法只是修改 python3 的命令,但是不能从根本上解决问题**
+⚠️**:该方法只是修改 python3 的命令,但是不能从根本上解决问题**
 
 #### Error
 
+> 该方法只修改了Python3的命令, 但是 Python 的其他命令仍为就版本,如 pip3 示例如下:
+
 ```shell
-$ pip3 -V                                                                                                                                      
-pip 21.1.3 from /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pip (python 3.9)
-$ source .bash_profile
 $ pip3 -V
 pip 21.0.1 from /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/pip (python 3.8)
+$ source .bash_profile 
+# 修改环境变量后
+$ pip3 -V                                                                                                                              
+pip 21.1.3 from /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pip (python 3.9)
 ```
-
-
 
 ## PyCharm 安装
 
 #### [下载](https://www.jetbrains.com/pycharm/download/#section=mac)并正常安装即可
 
 
-
-# 参考内容
+## 参考内容
 
 ---
 
+<h5 id ='refer-anchor-1'><a href ="https://www.cnblogs.com/songjianming/articles/12497740.htm">[1]: Mac中环境变量加载顺序</a></h5>   
 
-[^1]: [Mac中环境变量加载顺序](https://www.cnblogs.com/songjianming/articles/12497740.html)
-
-[^2]: [Linux起别名详解](https://blog.csdn.net/qq_44821149/article/details/104065460)
+<h5 id="refer-anchor-2"><a href ="https://blog.csdn.net/qq_44821149/article/details/104065460">[2]: Linux起别名详解</a></h5>   
 
