--- a/source/_posts/算法导论/算法分析(一).md
+++ b/source/_posts/算法导论/算法分析(一).md
@@ -6,7 +6,7 @@ date: 2020-07-08 15:40:07
 top: false
 cover: true
 coverImg: https://gitee.com/KawYang/image/raw/master/img/20210417234444.png
-toc: false
+toc: true
 mathjax: true
 categories: 算法
 img:  https://gitee.com/KawYang/image/raw/master/img/20210417234444.png
