提交一下 - 爬虫

--- a/source/_posts/Python/环境配置.md
+++ b/source/_posts/Python/环境配置.md
@@ -87,10 +87,21 @@ $ pip3 -V
 pip 21.1.3 from /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/pip (python 3.9)
 ```
 
-## PyCharm 安装
+## 工具
 
-#### [下载](https://www.jetbrains.com/pycharm/download/#section=mac)并正常安装即可
+1. [PyCharm](https://www.jetbrains.com/pycharm/download/#section=mac)
 
+   > Jetbrains的Python开发工具
+
+   ![image-20210829202519056](https://gitee.com/KawYang/image/raw/master/img/image-20210829202519056.png)
+
+   
+
+2. [Jupyter]((https://jupyter.org/)
+
+   > 类似于一个服务, 在 termianl 中运行`jupyter-notebook`, 在浏览器中访问服务地址,即可开始开发学习了.
+
+   ![image-20210829125813239](https://gitee.com/KawYang/image/raw/master/img/image-20210829125813239.png)
 
 ## 参考内容
 
