--- a/source/_posts/搭建自己的博客.md
+++ b/source/_posts/搭建自己的博客.md
@@ -5,9 +5,9 @@ top: false
 cover: false
 toc: true
 mathjax: true
-categories: other
+categories: Utils
 tags:
-  - hexo
+  - Utils
 abbrlink: 99c36cb
 date: 2021-07-06 20:58:16
 coverImg: 
