--- a/source/_posts/Python/爬虫/正则表达式.md
+++ b/source/_posts/Python/爬虫/正则表达式.md
@@ -11,8 +11,8 @@ tags:
   - 爬虫
 abbrlink: 2f57a694
 date: 2020-08-29 23:07:25
-img:
-coverImg:
+img: https://gitee.com/KawYang/image/raw/master/img/20210829234004.png
+coverImg: https://gitee.com/KawYang/image/raw/master/img/20210829234004.png
 ---
 
 # 正则表达式
