--- a/source/_posts/Python/爬虫/爬虫模拟登录.md
+++ b/source/_posts/Python/爬虫/爬虫模拟登录.md
@@ -11,8 +11,8 @@ tags:
   - 爬虫
 abbrlink: 94e157f8
 date: 2020-08-29 22:55:39
-img:
-coverImg:
+img: https://gitee.com/KawYang/image/raw/master/img/20210829234346.png
+coverImg: https://gitee.com/KawYang/image/raw/master/img/20210829234346.png
 ---
 
 # 知乎
