--- a/source/_posts/算法导论/算法分析(二).md
+++ b/source/_posts/算法导论/算法分析(二).md
@@ -13,19 +13,18 @@ abbrlink: 2a0926d8
 date: 2021-07-05 21:38:31
 img:
 ---
-## 算法分析(二)
-
-### 一 渐进符号
+# 算法分析
+## 一、 渐进符号
 
 #### O符号 (大O符号)
 
-> **定义**: $$f(n) = O(g(n)) f(n) 属于 g(n)的函数集, \exist$$常数c, n<sub>0</sub>  c> 0 , n<sub>0</sub> > 0
+> **定义**: $$f(n) = O(g(n)) f(n) 属于 g(n)的函数集, \exists $$常数c, n<sub>0</sub>  c> 0 , n<sub>0</sub> > 0
 >
 > **使得** $f(n) \leq O(g(n))$ 对于充分大的 n 成立,  n >= n<sub>0</sub>
 
-#### Ex: $ 2n^2 = O(n^3)$ **等号是不对称的**
+#### Ex: $ 2n^2 = O(n^3) $ **等号是不对称的**
 
-$ O(g(n)) =  \{ f(n) |\  \exists ,c > 0, n_0 > 0, 使得\ f(n) \ 以\ 0 和\ c *g(n)为界\   0 \leq f(f(n)) \leq c *g(n) \  for \ all \  n \geq n_0 \}$
+$$ O(g(n)) =  \{ f(n) |\  \exists ,c > 0, n_0 > 0, 使得\ f(n) \ 以\ 0 和\ c *g(n)为界\   0 \leq f(f(n)) \leq c *g(n) \  for \ all \  n \geq n_0 \}$$
 
 `不是等于 => 是一种 属于的关系`
 
@@ -33,13 +32,11 @@ $ O(g(n)) =  \{ f(n) |\  \exists ,c > 0, n_0 > 0, 使得\ f(n) \ 以\ 0 和\ c *
 
 $ f(n) = n^3 + O(n^2)$ 表示
 
-$ f(n) = n^3 + O(n^2) \  \exist h(n) \in O(n^2) => f(n) = n^3 + h(n)  , 存在 n > n_0$
+$ f(n) = n^3 + O(n^2) \  \exists h(n) \in O(n^2) => f(n) = n^3 + h(n)  , 存在 n > n_0$
 
 有低阶项以某个常数 * $n^2$ 为 界
 
-### Ex
-
-$ n^ 2  +O(n) = O(n^2)$ **此处不对称, 表示 is **
+#### Ex $ n^ 2  +O(n) = O(n^2)$ **此处不对称, 表示 is **
 
 > 任何$n^2  +O(n)$ 都是 $O(n^2)$ 反之不然
 
@@ -59,12 +56,11 @@ $ means \ for  \ any \ f(n) \in O(n) \ there \ is \ an \ h(n) \in O(n^2) \ such 
 
 
 
-### 二 严格符号
+## 二、 严格符号
 
 #### o 符号 (小o符号)
 
 #### ω 符号 (小ω符号)
-
 
 
 ## 解递归式
