--- a/source/_posts/Java/网络编程.md
+++ b/source/_posts/Java/网络编程.md
@@ -4,10 +4,11 @@ tags:
   - java
 categories: Java
 abbrlink: e252efa0
+top: false
 date: 2020-08-18 08:13:40
 ---
 
-> 
+
 
 ## 示例
 
@@ -63,7 +64,7 @@ try {
 ## 文件上传
 
 > 先启动服务器，服务器需要获取到网络输入流的内容，并使用本地输出流将获取到的内容保存到服务器
->
+> 
 > 客户端需要使用文件输入流将本地的文件读取出来，使用网络输出流将数据传递到服务器
 
 ### 服务器
@@ -313,14 +314,14 @@ public class NetTest {
 1. 构造方法
 
 - public Socket([String](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/lang/String.html) host, int port)       throws [UnknownHostException](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/net/UnknownHostException.html), IOException
-
 - [@Deprecated](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/lang/Deprecated.html) public Socket([String](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/lang/String.html) host, int port, boolean stream)       throws [IOException](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/IOException.html)
 
   **Deprecated.**
 
   Use DatagramSocket instead for UDP transport.
 
-2. 方法
+
+1. 方法
 
 - public [InputStream](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/InputStream.html) getInputStream()                           throws IOException
 - public [OutputStream](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/OutputStream.html) getOutputStream()                             throws [IOException](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/IOException.html)
@@ -336,12 +337,11 @@ public class NetTest {
 - public ServerSocket(int port, int backlog)             throws [IOException](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/IOException.html)
 - public ServerSocket(int port)             throws [IOException](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/IOException.html)
 
-2. 方法
+1. 方法
 
 - public [Socket](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/net/Socket.html) accept()              throws [IOException](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/IOException.html)
 
   Listens for a connection to be made to this socket and accepts it. The method blocks until a connection is made.
 
 - public void close()           throws [IOException](dfile:///Users/mac/Library/Application Support/Dash/DocSets/Java_SE13/Java.docset/Contents/Resources/Documents/java.base/java/io/IOException.html)
-
 - public boolean isClosed()
