--- a/source/_posts/JavaWeb/验证码生成.md
+++ b/source/_posts/JavaWeb/验证码生成.md
@@ -4,18 +4,17 @@ title: 验证码
 categories: Web
 tag: JavaWeb
 img: 
-top: true
+top: false
 cover: false
 date: 2020-06-04 14:04:05
 ---
 
 > 验证码使用
 
-
 # 验证码生成步骤
 
 1. 创建图片缓存对象`BufferedImage`
-2. 画图 
+2. 画图
 3. 生成随机数据
 4. 填充到图片中
 5. 干扰线
