--- a/source/_posts/设计模式/设计模式-责任链模式.md
+++ b/source/_posts/设计模式/设计模式-责任链模式.md
@@ -1,7 +1,7 @@
 ---
 title: 责任链模式
 author: KawYang
-top: true
+top: false
 cover: false
 coverImg: /images/1.jpg
 toc: true
@@ -13,6 +13,7 @@ abbrlink: 6208627e
 date: 2021-07-05 21:38:31
 img:
 ---
+
 # 责任链模式
 
 ## 说明
@@ -32,4 +33,3 @@ public class firstHandler implement Ihandler{
     
 }
 ```
-
